# flashcard-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  WARP.md  build.rs  tauri.conf.json
desktop-ui/: index.html  script.js  styles.css
doc/: DESKTOP_README.md  QUICKSTART.md
icons/: README.md
scripts/: generate_ascii_art.py  generate_icon.py  hiragana_ascii_art.txt  katakana_ascii_art.txt  update_main_rs.py
src/: desktop.rs  main.rs
web/: README.md  index.html  script.js  styles.css
web-server/: Cargo.toml
