[package]
name = "jp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
unicode-width = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
rand = "0.8"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }
ctrlc = "3.4"
